# ModernCppTutorial

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml
cmake/: add_test.cmake
examples/: CMakeLists.txt
examples/C++20/: atomic.cpp  concept.cpp  format.cpp  jthread.cpp  ranges.cpp  span.cpp
examples/c++11/: CMakeLists.txt  array.cpp  atomic.cpp  auto.cpp  bind.cpp  constexpr.cpp  containers.cpp  decltype.cpp  explicit.cpp  extern_template.cpp  extern_template_class.cpp  extern_template_class.h  forward_list.cpp  future.cpp  initializer_list.cpp  lambda.cpp  move.cpp  mutex.cpp  namespace.cpp  nullptr.cpp  object_oriented.cpp  random.cpp  range_loop.cpp  regex.cpp  rvalue_lvalue_references.cpp  smart_pointers.cpp  string_literal.cpp  strongly_typed_enumerations.cpp  thread.cpp  tuple.cpp  unordered_map.cpp  unordered_set.cpp  user_defined_literals.cpp  using_alias.cpp  variadic_template.cpp
examples/c++11/helpers/: extern_template_class.cpp
examples/c++17/: CMakeLists.txt  any.cpp  declaration_in_if.cpp  if_constexpr.cpp  variant.cpp
examples/idioms/: CRTP.cpp
tools/: format_staged_files.sh  install-precommit-hook.sh
